# advent-of-code

./: .gitignore  .session  2025_day9_plot.py  Cargo.toml  benches.txt  day.sh  fast_div_day2.rs  readme.md  tmp1  tmp2
.github/workflows/: codspeed.yml
benches/: bench_days.rs
src/: lib.rs  main.rs
src/solutions/: mod.rs
src/solutions/year2015/: day1.rs  day2.rs  mod.rs
src/solutions/year2016/: day5.rs
src/solutions/year2018/: day6.rs
src/solutions/year2019/: day1.rs  day11.rs
src/solutions/year2020/: day1.rs  day2.rs  day5.rs
src/solutions/year2021/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs
src/solutions/year2022/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/solutions/year2023/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/solutions/year2024/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/solutions/year2025/: day1.rs  day10.rs  day11.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/utils/: grid.rs  mod.rs  parsing.rs
src/utils/graphs/: dijkstra.rs
