[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
atoi = "2.0.0"
bstr = "1.11.0"
indexmap = "2.7.0"
num-traits = "0.2.19"
regex = "1.10.6"
rustc-hash = "2.1.0"


# codspeed
[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat", default-features = false }
indoc = "2.0.5"
paste = "1.0.15"


[[bench]]
name = "bench_days"
harness = false
